# quantumflow

./: Cargo.toml  Dockerfile  README.md
.github/workflows/: ci.yml
benches/: matching_engine_bench.rs  orderbook_bench.rs
docs/: architecture.mmd  matching_flow.mmd
examples/: simple_trading.rs
src/: lib.rs  main.rs
src/backtest/: engine.rs
src/connectors/: binance.rs
src/engine/: matching.rs  orderbook.rs
src/risk/: manager.rs
src/utils/: types.rs
tests/: integration_test.rs
